@@ -1,7 +1,7 @@
 # Defines plugins to load
 
 # Define plugin folder
-PluginFolder=/home/tamino/Dokumente/Projekte/Informatik/C++/wc3sdk/wc3lib/lib/extern/OGRE/ogre_src_v1-7-2/lib
+PluginFolder=/home/tamino/Dokumente/Projekte/Informatik/C++/wc3sdk/wc3lib/lib/extern/OGRE/ogre_src_v1-7-3/lib
 # Define D3D rendering implementation plugin
 Plugin=RenderSystem_GL.so
 Plugin=Plugin_ParticleFX.so
